refactor: UserService.java and TransactionService.java